<resources>
  <string name="app_name">Stackulator</string>

  <string name="action_dark_theme">Dark Theme</string>
  <string name="action_about">About</string>


  <string name="info_version">Version</string>

  <string name="action_view_changelog">Changelog</string>
  <string name="action_view_licenses">Licenses</string>
  <string name="action_send_feedback">Send Feedback</string>


  <string name="info_author">Author</string>


  <string name="operation_add_symbol">+</string>
  <string name="operation_subtract_symbol">-</string>
  <string name="operation_multiply_symbol">×</string>
  <string name="operation_divide_symbol">÷</string>

  <string name="operation_add">Add</string>
  <string name="operation_subtract">Subtract</string>
  <string name="operation_multiply">Multiply</string>
  <string name="operation_divide">Divide</string>

  <string name="operation_square_symbol">x²</string>
  <string name="operation_power_symbol">xʸ</string>
  <string name="operation_root_symbol">ˣ√</string>
  <string name="operation_reciprocal_symbol">1/x</string>

  <string name="operation_square">Square</string>
  <string name="operation_power">Power</string>
  <string name="operation_root">Root</string>
  <string name="operation_reciprocal">Reciprocal</string>

  <string name="operation_swap">Swap</string>
  <string name="operation_drop">Drop</string>


  <string name="operation_sin">sin</string>
  <string name="operation_sin_inverse">sin⁻¹</string>
  <string name="operation_cos">cos</string>
  <string name="operation_cos_inverse">cos⁻¹</string>
  <string name="operation_tan">tan</string>
  <string name="operation_tan_inverse">tan⁻¹</string>


  <string name="operation_natural_log_symbol">ln</string>
  <string name="operation_log_symbol">log</string>

  <string name="operation_natural_log">Natural Logarithm</string>
  <string name="operation_log">Logarithm</string>


  <string name="operation_factorial_symbol">!</string>
  <string name="operation_modulo_symbol">%</string>

  <string name="operation_factorial">Factorial</string>
  <string name="operation_modulo">Modulo</string>


  <string name="number_0">0</string>
  <string name="number_1">1</string>
  <string name="number_2">2</string>
  <string name="number_3">3</string>
  <string name="number_4">4</string>
  <string name="number_5">5</string>
  <string name="number_6">6</string>
  <string name="number_7">7</string>
  <string name="number_8">8</string>
  <string name="number_9">9</string>

  <string name="number_decimal_symbol">.</string>
  <string name="number_invert_symbol">±</string>

  <string name="number_decimal">Decimal</string>
  <string name="number_invert">Invert</string>

  <string name="operation_euler">e</string>
  <string name="operation_pi">π</string>

  <string name="edit_toggle">Edit</string>
  <string name="edit_backspace">Backspace</string>
  <string name="edit_push">Push</string>

  <string name="identifier_none"/>
  <string name="identifier_top">x</string>
  <string name="identifier_top_minus_one">y</string>

  <string name="error_none">No error occured. This shouldn\'t happen.</string>

  <string name="error_stack_empty">The stack doesn\'t contain enough values.</string>

  <string name="error_bad_number">That number isn\'t valid.</string>
  <string name="error_overflow">Resulting number too large.</string>
  <string name="error_divide_by_zero">Division by zero.</string>
  <string name="error_out_of_bounds">Number out of bounds.</string>

  <string name="error_no_more_undo">No more undo steps.</string>
  <string name="error_no_more_redo">No more redo steps.</string>

  <string name="error_unknown">Internal error occured.</string>

  <string name="value_operation_in_progress">Hold on for a moment...</string>
</resources>
